# tarragoneta

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_PLAN_STAGING.md  DOCKER_SETUP.md  EMAILS_LIST.md  Procfile  QUICK_START.md  RAILWAY_SETUP_CHECKLIST.md  RAILWAY_WORKER_SETUP.md  README.md  README_START.md  SEED_DATA_README.md  SETUP_CELERY.md  SETUP_GMAIL.md  SETUP_HOSTINGER_SMTP.md  SETUP_LOCAL.md  SETUP_REDIS_RAILWAY.md  SETUP_STRIPE_WEBHOOK.md  SETUP_STRIPE_WEBHOOK_PRODUCTION.md  SETUP_WORKER_RAILWAY.md  TODO_PENDIENTE.md  app.py  celery_worker.py  check_env.py  compile_translations.py  docker-compose.yml  env.example  import_geojson_zones.py  init_db.py  messages.pot  pyproject.toml  railway.json  requirements.txt  run.py  seed_all.py  seed_data.py  setup_webhook.sh  start.sh  start_production.sh  (+8 more)
app/: __init__.py  celery_app.py  cli.py  config.py  container.py  extensions.py  forms.py  models.py  utils.py
app/core/: __init__.py  cli.py  context_processors.py  decorators.py  error_handlers.py  logging_config.py  rate_limiting.py
app/providers/: __init__.py  base.py  console_provider.py  smtp_provider.py
app/routes/: __init__.py  admin.py  analytics.py  donations.py  initiatives.py  inventory.py  main.py
app/services/: email_service.py
app/storage/: __init__.py  base.py  bunny.py  local.py  s3.py
app/tasks/: __init__.py  email_tasks.py  image_tasks.py
babel/: messages.pot
geojson_tarragona/districte1/: seccio1_districte1.geojson
geojson_tarragona/districte2/: seccio1_districte2.geojson
geojson_tarragona/districte3/: seccio1_districte3.geojson  seccio2_districte3.geojson  (+1 more)
migrations/: README.md  alembic.ini  env.py
scripts/: cleanup_duplicate_subcategories.py  list_categories.py  migrate_items_to_categories.py  seed_categories.py  storage_test.py
templates/: about.html  base.html  contact.html  donate.html  donate_success.html  index.html  initiative_detail.html  profile.html
(+162 files in other folders)
